Java upgrades tech debt changes